<resources>
    <string name="app_name">Smart Parking System</string>
    <string name="monitoring">Моніторинг</string>
    <string name="device_control">Керування пристроями</string>
    <string name="automation_rules">Правила автоматизації</string>
    <string name="free_spots">Вільні місця</string>
    <string name="co_level">Рівень CO</string>
    <string name="nox_level">Рівень NOx</string>
    <string name="temperature">Температура</string>
    <string name="start_generation">Почати генерацію</string>
    <string name="stop_generation">Зупинити генерацію</string>
    <string name="sync">Синхронізувати</string>
    <string name="connected">Підключено</string>
    <string name="disconnected">Відключено</string>
    <string name="statistics">Статистика</string>
    <string name="total_records">Всього записів</string>
    <string name="average">Середнє</string>
    <string name="direction_panels">Панелі з напрямками</string>
    <string name="ventilation">Вентиляція</string>
    <string name="heating">Обігрів</string>
    <string name="enabled">Увімкнено</string>
    <string name="disabled">Вимкнено</string>
    <string name="brightness">Яскравість</string>
    <string name="fan_speed">Швидкість вентиляції</string>
    <string name="heating_power">Потужність обігріву</string>
    <string name="rule_name">Назва правила</string>
    <string name="sensor_type">Тип сенсора</string>
    <string name="operator">Оператор</string>
    <string name="threshold">Порогове значення</string>
    <string name="device_type">Тип пристрою</string>
    <string name="add_rule">Додати правило</string>
    <string name="edit_rule">Редагувати правило</string>
    <string name="delete_rule">Видалити правило</string>
    <string name="time_range">Часовий проміжок</string>
    <string name="last_hour">Остання година</string>
    <string name="last_6_hours">Останні 6 годин</string>
    <string name="last_24_hours">Останні 24 години</string>
    <string name="last_week">Останній тиждень</string>
    <string name="connection_status">Статус з\'єднання</string>
    <string name="average_free_spots">Середнє вільних місць</string>
    <string name="average_co">Середній CO</string>
    <string name="average_temperature">Середня температура</string>
</resources>